[package]
name = "crab-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in tool implementations for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-fs.workspace = true
crab-process.workspace = true
crab-mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
globset.workspace = true
schemars.workspace = true

[lints]
workspace = true
