[package]
name = "crab-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in tool implementations for Crab Code"

[dependencies]
crab-core.workspace = true
crab-config.workspace = true
crab-fs.workspace = true
crab-process.workspace = true
crab-sandbox.workspace = true
crab-mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
jsonschema.workspace = true
base64.workspace = true
pdf_oxide = { workspace = true, optional = true }
portable-pty = { workspace = true, optional = true }
strip-ansi-escapes = { workspace = true, optional = true }

[features]
default = ["pdf"]
pdf = ["pdf_oxide"]
pty = ["portable-pty", "strip-ansi-escapes"]
macos-ax = []
win-native = []
x11 = []
wayland = []

[dev-dependencies]
tokio-util.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
