[package]
name = "crab-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
serde.workspace = true
serde_json.workspace = true
crab-config.workspace = true
crab-agent.workspace = true
crab-api.workspace = true
crab-tools.workspace = true
crab-mcp.workspace = true
crab-session.workspace = true
crab-plugin.workspace = true
crab-skill.workspace = true
ratatui.workspace = true
crossterm.workspace = true
syntect.workspace = true
pulldown-cmark.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
tempfile.workspace = true
uuid.workspace = true
nucleo-matcher.workspace = true

[lints]
workspace = true
