[package]
name = "crab-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for Crab Code"

[dependencies]
crab-utils.workspace = true
crab-core.workspace = true
serde.workspace = true
serde_json.workspace = true
crab-config.workspace = true
crab-agents.workspace = true
crab-commands.workspace = true
crab-memory.workspace = true
ratatui.workspace = true
crossterm.workspace = true
syntect.workspace = true
pulldown-cmark.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
tempfile.workspace = true
uuid.workspace = true
nucleo-matcher.workspace = true
lru.workspace = true
schemars.workspace = true
chrono.workspace = true
arboard.workspace = true
notify.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
